data/all_generated_tests/raw_wast_tests/call_StackCorruption_3242.wast
;; 1. **Test Description**: Call a function with more arguments than required.    - **Constraint**: Tests for stack overflow due to excess arguments being pushed onto the stack.    - **Relation to Stack Corruption**: Ensures argument checking successfully prevents overflow by correlating argument count with expected function parameters.

(assert_invalid
  (module
    (func $type-excess-args (call 1 (i32.const 1) (i32.const 2) (i32.const 3)))
    (func (param i32 i32))
  )
  "type mismatch"
)